0.11.99
	+ Add File type including uploading and downloading
0.10.99
	+ Add disk usage information
	+ Show progress in backup process
	+ Add option to purge logs
	+ Create a link from /var/lib/ebox/log to /var/log/ebox
	+ Fix bug with backup descriptions containing spaces
	+ Add removeAll method on data models
	+ Add HostIP, DomainName and Port types
	+ Add readonly forms to display static information
	+ Add Danish translation thanks to Allan Jacobsen
0.10
	+ New release
0.9.100
	+ Add checking for SOAP session opened
	+ Add EventDaemon
	+ Add Watcher and Dispatch framework to support an event
	  architecture on eBox
	+ Add volatile EBox::Types in order not to store their values 
	  on GConf
	+ Add generic form
	+ Improvements on generic table
	+ Added Swedish translation

0.9.99
	+ Added Portuguese from Portugal translation
	+ Added Russian translation
	+ Bugfix: bad changed state in modules after restore

0.9.3
	+ New release

0.9.2
	+ Add browser warning when uploading files
	+ Enable/disable logging modules
0.9.1
	+ Fix backup issue with changed state
	+ Generic table supports custom ordering
0.9
	+ Added Polish translation
        + Bug in recognition of old CD-R writting devices fixed
	+ Added Aragonese translation
	+ Added Dutch translation
	+ Added German translation
	+ Added Portuguese translation

0.8.99
	+ Add data table model for generic Ajax tables
	+ Add types to be used by models
	+ Add MigrationBase and ebox-migrate to upgrade data models
	+ Some English fixes
0.8.1
	+ New release
0.8
	+ Fix backup issue related to bug reports
	+ Improved backup GUI
0.7.99
        + changed sudo stub to be more permissive
	+ added startup file to apache web server
	+ enhanced backup module
	+ added basic CD/DVD support to backup module
	+ added test stubs to simplify testing
	+ added test class in the spirit of Test::Class
	+ Html.pm now uses mason templates
0.7.1
	+ use Apache::Reload to reload modules when changed
	+ GUI consistency (#12)