@@ -1,5 +1,9 @@
 0.11.99
 	+ Add File type including uploading and downloading
+	+ Event daemon now checks if it is possible to send an event
+	before actually sending it
+	+ Added Action forms to perform an action without modifying
+	persistent data
 0.10.99
 	+ Add disk usage information
 	+ Show progress in backup process
